@@ -1,4 +1,5 @@
 local nmap = require "nmap"
+local match = require "match"
 local os = require "os"
 local shortport = require "shortport"
 local stdnse = require "stdnse"
@@ -210,7 +211,7 @@ function get_agent(host, port, output)
         socket:close()
         return nil, err
     end
-    status, response = socket:receive_buf("</st1:response>", true)
+    status, response = socket:receive_buf(match.pattern_limit("</st1:response>", 2048), true)
     if not status then
         socket:close()
         return nil, response
@@ -242,7 +243,7 @@ function get_svctag_list(host, port)
         socket:close()
         return nil, err
     end
-    status, response = socket:receive_buf("</service_tags>", true)
+    status, response = socket:receive_buf(match.pattern_limit("</service_tags>", 2048), true)
     if not status then
         socket:close()
         return nil, response
@@ -272,7 +273,7 @@ function get_svctag(host, port, svctag)
         socket:close()
         return nil, err
     end
-    status, response = socket:receive_buf("</st1:response>", true)
+    status, response = socket:receive_buf(match.pattern_limit("</st1:response>", 2048), true)
     if not status then
         socket:close()
         return nil, response
